admin menu z-index fix

--- a/assets/styles/modules/adminMenu.scss
+++ b/assets/styles/modules/adminMenu.scss
@@ -1,5 +1,6 @@
 .adminMenu {
     width: 0px;
+    z-index: 10;
 
     .menuAdminHamburgerButton {
         background: var(--color-white);
